--- a/cloud-init/secrets/dev.env.example
+++ b/cloud-init/secrets/dev.env.example
@@ -12,3 +12,6 @@ TAILSCALE_AUTH_KEY=tskey-auth-XXXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX
 # Avoid overlap with Azure VNet (typically 10.x.x.x)
 # dev: 172.20.0.0/16, test: 172.21.0.0/16, prod: 172.22.0.0/16
 DOCKER_SWARM_ADDR_POOL=172.20.0.0/16
+
+# VM hostname (default: dokploy-${ENVIRONMENT})
+# VM_HOSTNAME=my-custom-hostname
